# jsonschema

./: .appveyor.yml  .coveragerc  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  DEMO.ipynb  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  bench.py  catch_warnings25.py  codecov.yml  commit_msg.txt  demo.yml  index.js  json_decoder  jsons.py  jsonschema.py  noxfile.py  output-test-schema.json  package.json  perftest  pyproject.toml  raise_exception_2.py  raise_exception_3.py  setup.cfg  setup.py  test-requirements.txt  test-schema.json  (+6 more)
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  coverage.sh  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  documentation-links.yml  fuzz.yml  main.yml  packaging.yml  pre-commit.yml  show_specification_annotations.yml  zizmor.yml
annotations/: assertion.schema.json  test-case.schema.json  test-suite.schema.json
annotations/tests/: core.json  meta-data.json  unknown.json
benchmarks/: README.rst  bench.py  standard.py  test_suite.py  utils.py
doc/: errors.rst  index.rst  validate.rst
docs/: Makefile  conf.py  creating.rst  doc-requirements.txt  errors.rst  faq.rst  formats.rst  index.rst  jsonschema_role.py  make.bat  references.rst  referencing.rst  requirements.in  requirements.txt  spelling-wordlist.txt  types.rst  validate.rst
docs/api/: index.rst
json/: README.md  index.js  package.json  test-schema.json  tox.ini
json/annotations/: README.md  test.schema.json
json/output-tests/: README.md
json/remotes/: locationIndependentIdentifier.json  locationIndependentIdentifierDraft4.json  ref-and-definitions.json
jsonschema/: __init__.py  __init__.pyi  _annotation.py  _evaluated.py  _format.py  _format.pyi  _format_validators.py  _keywords.py  _legacy_keywords.py  _legacy_validators.py  _pre_commit_cli.py  _reflect.py  _types.py  _typing.py  _uri.py  _utils.py  _utils.pyi  _validators.py  _version.py  cli.py  compact.py  compat.py  custom_validators.py  exceptions.py  exceptions.pyi  human_errors.py  protocols.py  strings.py  validators.py  validators.pyi  version.py
jsonschema/benchmarks/: import_benchmark.py  issue.py  issue232.py  json_schema_test_suite.py  test_suite.py  type_validator.py  validator_creation.py
jsonschema/exceptions/: keywords.py
jsonschema/schemas/: draft3.json  draft4.json  draft6.json  draft7.json  vocabularies.json
jsonschema/tests/: _helpers.py  _suite.py  async_test_validators.py  async_validators.py  compat.py  fuzz_validate.py  test_annotation.py  test_async_validators.py  test_benchmarks.py  test_cli.py  test_custom_validators.py  test_deprecations.py  test_exceptions.py  test_format.py  test_human_errors.py  test_human_errors_examples.py  test_jsonschema_test_suite.py  test_pre_commit_cli.py  test_types.py  test_utils.py  test_validate_fuzz.py  test_validators.py
output-tests/: README.md
output-tests/draft-next/: output-schema.json
output-tests/draft2019-09/: output-schema.json
output-tests/draft2020-12/: output-schema.json
remotes/: extendible-dynamic-ref.json  ref-and-defs.json  subSchemas-defs.json  tree.json
remotes/draft-next/: detached-dynamicref.json  extendible-dynamic-ref.json  format-assertion-false.json  locationIndependentIdentifier.json  locationIndependentIdentifierDraft4.json  locationIndependentIdentifierPre2019.json  metaschema-no-validation.json  metaschema-optional-vocabulary.json  name-defs.json  ref-and-definitions.json  ref-and-defs.json  tree.json
remotes/draft2019-09/: detached-ref.json  different-id-ref-string.json  locationIndependentIdentifier.json  locationIndependentIdentifierPre2019.json  metaschema-no-validation.json  metaschema-optional-vocabulary.json  name-defs.json
remotes/draft2020-12/: format-assertion-true.json  locationIndependentIdentifierPre2019.json  metaschema-no-validation.json  name.json  subSchemas.json  urn-ref-string.json
remotes/draft3/: subSchemas.json
remotes/draft6/: detached-ref.json  ref-and-definitions.json
remotes/nested/: foo-ref-string.json
remotes/v1/: detached-dynamicref.json  detached-ref.json  different-id-ref-string.json  locationIndependentIdentifier.json  tree.json  urn-ref-string.json
tests/: latest
tests/draft-future/: anchor.json  dependentRequired.json  id.json  infinite-loop-detection.json  items.json  minContains.json  prefixItems.json  ref.json  unevaluatedProperties.json
tests/draft-next/: additionalProperties.json  allOf.json  anchor.json  const.json  contains.json  content.json  default.json  defs.json  dependentRequired.json  dependentSchemas.json  dynamicRef.json  enum.json  exclusiveMaximum.json  exclusiveMinimum.json  format.json  id.json  infinite-loop-detection.json  items.json  maxContains.json  maxLength.json  maxProperties.json  maximum.json  minContains.json  minItems.json  multipleOf.json  not.json  pattern.json  patternProperties.json  prefixItems.json  propertyDependencies.json  propertyNames.json  ref.json  refRemote.json  type.json  unevaluatedItems.json  unevaluatedProperties.json  uniqueItems.json  vocabulary.json
tests/draft2019-06/: enum.json  ref.json
tests/draft2019-09/: additionalItems.json  additionalProperties.json  allOf.json  anchor.json  const.json  content.json  defs.json  dependentRequired.json  dependentSchemas.json  enum.json  exclusiveMinimum.json  format.json  id.json  if-then-else.json  items.json  maxContains.json  maxItems.json  maxProperties.json  maximum.json  minContains.json  minProperties.json  minimum.json  multipleOf.json  oneOf.json  pattern.json  patternProperties.json  properties.json  propertyNames.json  recursiveRef.json  ref.json  refRemote.json  required.json  unevaluatedItems.json  unevaluatedProperties.json  uniqueItems.json  vocabulary.json
tests/draft2020-12/: anchor.json  contains.json  content.json  defs.json  dynamicRef.json  id.json  maximum.json  minContains.json  pattern.json  patternProperties.json  ref.json  refRemote.json  required.json  uniqueItems.json  (+3 more)
(+571 files in other folders)
