[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "jsonschema"
description = "An implementation of JSON Schema validation for Python"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["validation", "data validation", "jsonschema", "json"]
authors = [
  {email = "Julian+jsonschema@GrayVines.com"},
  {name = "Julian Berman"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "readme"]

dependencies = [
  "attrs>=17.4.0",
  "pyrsistent>=0.14.0,!=0.17.0,!=0.17.1,!=0.17.2",

  "importlib_metadata;python_version<'3.8'",
  "typing_extensions;python_version<'3.8'",

  "importlib_resources>=1.4.0;python_version<'3.9'",
  "pkgutil_resolve_name>=1.3.10;python_version<'3.9'",
]

[project.optional-dependencies]
format = [
  "fqdn",
  "idna",
  "isoduration",
  "jsonpointer>1.13",
  "rfc3339-validator",
  "rfc3987",
  "uri_template",
  "webcolors>=1.11",
]
format-nongpl = [
  "fqdn",
  "idna",
  "isoduration",
  "jsonpointer>1.13",
  "rfc3339-validator",
  "rfc3986-validator>0.1.0",
  "uri_template",
  "webcolors>=1.11",
]

[project.scripts]
jsonschema = "jsonschema.cli:main"

[project.urls]
Homepage = "https://github.com/python-jsonschema/jsonschema"
Documentation = "https://python-jsonschema.readthedocs.io/"
Issues = "https://github.com/python-jsonschema/jsonschema/issues/"
Funding = "https://github.com/sponsors/Julian"
Tidelift = "https://tidelift.com/subscription/pkg/pypi-jsonschema?utm_source=pypi-jsonschema&utm_medium=referral&utm_campaign=pypi-link"
Changelog = "https://github.com/python-jsonschema/jsonschema/blob/main/CHANGELOG.rst"
Source = "https://github.com/python-jsonschema/jsonschema"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.rst"
end-before = ".. start cut from PyPI"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.rst"
start-after = ".. end cut from PyPI\n\n\n"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = """


Release Information
-------------------

"""

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG.rst"
pattern = "(^v.+?)\nv"

[tool.isort]
from_first = true
include_trailing_comma = true
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true

[tool.pydocstyle]
match = "(?!(test_|_|compat|cli)).*\\.py"  # see PyCQA/pydocstyle#323
add-select = [
  "D410", # Trailing whitespace plz
]
add-ignore = [
  "D107",  # Hah, no
  "D200",  # 1-line docstrings don't need to be on one line
  "D202",  # One line is fine.
  "D412",  # Trailing whitespace plz
  "D413",  # No trailing whitespace plz
]
