[metadata]
name = jsonschema
url = https://github.com/Julian/jsonschema
description = An implementation of JSON Schema validation for Python
long_description = file: README.rst
author = Julian Berman
author_email = Julian@GrayVines.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires = setuptools_scm
install_requires =
    attrs>=17.4.0
    pyrsistent>=0.14.0
    six>=1.11.0
    functools32;python_version<'3'

[options.extras_require]
format =
    jsonpointer>1.13
    rfc3987
    strict-rfc3339
    webcolors

[options.entry_points]
console_scripts =
    jsonschema = jsonschema.cli:main

[options.package_data]
jsonschema = schemas/*.json

[flake8]
exclude =
    jsonschema/__init__.py
    jsonschema/_reflect.py

[wheel]
universal = 1
